# ai_assisted_language_quizzer

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODEFLOW.md  README.md  pyproject.toml  requirements.txt  stopwords_spanish.txt
.cursor/rules/: project.mdc
.rules/: AGENTS.md
data/input/: spanish_words_from_extraSpanish.txt  spanish_words_from_extraSpanish_21July2025.txt
data/output/: anki_import_words.txt  translated_words.txt  word_frequency_report.csv  word_frequency_summary.md
language/: .env  add_words_to_anki_notes.py  app.py  download_from_alltalk.py  translate_wordlist.py
language/anki_tools/: add_audio_to_anki.py  add_words_to_anki_notes.py
language/audio/: download_from_alltalk.py
language/core/modules/: FileHandling.py  ReviewWords.py  __init__.py
language/core/subtitle_analyzer/: __init__.py  config.yaml  pronoun_context.py  report_generator.py  srt_parser.py  stopwords_spanish.txt  translator.py
language/data/input/: german_words.txt  spanish_words.txt
language/data/output/: anki_import_words.txt  translated_words.txt  word_frequency_report.csv  word_frequency_summary.md
language/modules/: FileHandling.py  ReviewWords.py
language/scripts/: subtitle_word_frequency.py
language/subtitle_analyzer/: README.md  __init__.py  config.yaml  report_generator.py  stopwords_spanish.txt
src/ai_assisted_language_quizzer/: paths.py
src/ai_assisted_language_quizzer/anki_tools/: add_audio_to_anki.py
src/ai_assisted_language_quizzer/scripts/: clean_subtitles.py  lingq_bulk_import.py  subtitle_word_frequency.py  translate_wordlist.py
(+17 files in other folders)
