[tool.poetry]
name = "language"
version = "0.1.0"
description = ""
authors = ["stratus-ss <steve.ovens@x86innovations.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
deepl = "^1.16"
gradio = "^3.50"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
